--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap');
-
-
+@import "tailwindcss";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
